Add Display a marker in the queue view indicating a rescan
- Either using the 'Force rescan' blog option or as long as the LastId of the blog is 0, a full rescan of the blog will be performed.
- Since this can take a long time depending on the crawler and blog size, a marker ("[F]") is displayed after the blog name in the queue.

--- a/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
@@ -22,6 +22,8 @@
 
     <c:BlogQueueProgressConverter x:Key="BlogQueueProgressConverter" />
 
+    <c:BlogQueueIndicatorConverter x:Key="BlogQueueIndicatorConverter" />
+
     <c:StatusToBoolConverter x:Key="StatusToBoolConverter" />
 
     <c:TotalImageConverter x:Key="TotalImageConverter" />
