--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsAllView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsAllView.xaml
@@ -219,6 +219,8 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="{StaticResource Layout.RowSpace}"/>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                                 <RowDefinition Height="Auto" />
@@ -932,6 +934,20 @@
                                 </CheckBox.ToolTip>
                             </CheckBox>
 
+                            <CheckBox Content="{x:Static p:Resources.SaveTextsIndividualFiles}"
+                                  IsChecked="{Binding BlogAll.SaveTextsIndividualFiles, Mode=TwoWay}" IsThreeState="{Binding BlogAll.SaveTextsIndividualFilesDiff, Mode=OneWay, IsAsync=True}"
+                                  Grid.Column="0" Grid.ColumnSpan="6" Margin="3,0,0,0" Padding="3,0,0,0" Grid.Row="50">
+                                <CheckBox.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipSaveTextsIndividualFiles}" />
+                                            <TextBlock xml:space="preserve"
+                                                   Text="{x:Static p:Resources.ToolTipSaveTextsIndividualFilesDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </CheckBox.ToolTip>
+                            </CheckBox>
+
                             <!--<CheckBox Content="{x:Static p:Resources.CheckDirectoryForFiles}"
                                   IsChecked="{Binding BlogAll.CheckDirectoryForFiles, Mode=TwoWay}" Grid.Column="0" Grid.ColumnSpan="2"
                                   Grid.Row="38" Margin="3,0,0,0" Padding="3,0,0,0">
@@ -949,7 +965,7 @@
 
                             <CheckBox Content="{x:Static p:Resources.DownloadUrlList2}"
                                   IsChecked="{Binding BlogAll.DownloadUrlList, Mode=TwoWay}" IsThreeState="{Binding BlogAll.DownloadUrlListDiff, Mode=OneWay}"
-                                  Grid.Column="0" Grid.Row="50" Grid.ColumnSpan="5" Margin="3,0,0,0" Padding="3,0,0,0">
+                                  Grid.Column="0" Grid.Row="52" Grid.ColumnSpan="5" Margin="3,0,0,0" Padding="3,0,0,0">
                                 <CheckBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
@@ -963,7 +979,7 @@
 
                             <CheckBox Content="{x:Static p:Resources.ForceSize}"
                                   IsChecked="{Binding BlogAll.ForceSize, Mode=TwoWay}" IsThreeState="{Binding BlogAll.ForceSizeDiff, Mode=OneWay}"
-                                  Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="52" Margin="3,0,0,0" Padding="3,0,0,0">
+                                  Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="54" Margin="3,0,0,0" Padding="3,0,0,0">
                                 <CheckBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
@@ -977,7 +993,7 @@
 
                             <CheckBox Content="{x:Static p:Resources.RegExPhotos}"
                                       IsChecked="{Binding BlogAll.RegExPhotos, Mode=TwoWay}" IsThreeState="{Binding BlogAll.RegExPhotosDiff, Mode=OneWay}"
-                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="54" Margin="3,0,0,0" Padding="3,0,0,0">
+                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="56" Margin="3,0,0,0" Padding="3,0,0,0">
                                 <CheckBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
@@ -991,7 +1007,7 @@
 
                             <CheckBox Content="{x:Static p:Resources.RegExVideos}"
                                       IsChecked="{Binding BlogAll.RegExVideos, Mode=TwoWay}" IsThreeState="{Binding BlogAll.RegExVideosDiff, Mode=OneWay}"
-                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="56" Margin="3,0,0,0" Padding="3,0,0,0">
+                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="58" Margin="3,0,0,0" Padding="3,0,0,0">
                                 <CheckBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
@@ -1005,7 +1021,7 @@
 
                             <CheckBox Content="{x:Static p:Resources.DumpCrawlerData}"
                                       IsChecked="{Binding BlogAll.DumpCrawlerData, Mode=TwoWay}" IsThreeState="{Binding BlogAll.DumpCrawlerDataDiff, Mode=OneWay}"
-                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="58" Margin="3,0,0,0" Padding="3,0,0,0">
+                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="60" Margin="3,0,0,0" Padding="3,0,0,0">
                                 <CheckBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
@@ -1019,7 +1035,7 @@
 
                             <CheckBox Content="{x:Static p:Resources.ForceRescan}"
                                       IsChecked="{Binding BlogAll.ForceRescan, Mode=TwoWay}" IsThreeState="{Binding BlogAll.ForceRescanDiff, Mode=OneWay}"
-                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="60" Margin="3,0,0,0" Padding="3,0,0,0">
+                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="62" Margin="3,0,0,0" Padding="3,0,0,0">
                                 <CheckBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
