--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsAllView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsAllView.xaml
@@ -1021,13 +1021,27 @@
 
                             <CheckBox Content="{x:Static p:Resources.DumpCrawlerData}"
                                       IsChecked="{Binding BlogAll.DumpCrawlerData, Mode=TwoWay}" IsThreeState="{Binding BlogAll.DumpCrawlerDataDiff, Mode=OneWay}"
-                                      Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="60" Margin="3,0,0,0" Padding="3,0,0,0">
+                                      Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="60" Margin="3,0,0,0" Padding="3,0,0,0">
                                 <CheckBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
                                             <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipDumpCrawlerData}" />
                                             <TextBlock xml:space="preserve"
                                                    Text="{x:Static p:Resources.ToolTipDumpCrawlerDataDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </CheckBox.ToolTip>
+                            </CheckBox>
+
+                            <CheckBox Content="{x:Static p:Resources.ZipCrawlerData}"
+                                  IsChecked="{Binding BlogAll.ZipCrawlerData, Mode=TwoWay}" IsThreeState="{Binding BlogAll.ZipCrawlerDataDiff, Mode=OneWay}"
+                                  Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="56" Margin="3,0,0,0" Padding="3,0,0,0">
+                                <CheckBox.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipZipCrawlerData}" />
+                                            <TextBlock xml:space="preserve"
+                                                   Text="{x:Static p:Resources.ToolTipZipCrawlerDataDescription}" />
                                         </StackPanel>
                                     </ToolTip>
                                 </CheckBox.ToolTip>
